# subagent-poc

./: README.md  app.py  pyproject.toml  requirements.txt
logs/: messages.json
src/agents/: launching_agent.py  meta_query_agent.py
src/llms/: openai_llm.py
src/states/: launching_agent_state.py  meta_query_agent_state.py
src/system_prompts/: launching_agent_system_prompt.py  meta_query_agent_system_prompt.py
src/tools/: image_generation_tool.py  launch_campaign_tool.py  launching_agent_tool.py  reporting_agent_tool.py
